--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "zsh/.antigen"]
-	path = zsh/.antigen
-	url = https://github.com/zsh-users/antigen
-[submodule "zsh/.zplug"]
-	path = zsh/.zplug
-	url = https://github.com/zplug/zplug
+[submodule "zsh/.zprezto"]
+	path = zsh/.zprezto
+	url = https://github.com/sorin-ionescu/prezto.git
