Lots of changes:
Using dotbot instead of custom script

ZSH: Removed prezto, using zplug. Updated theme

Config files for lots of new apps: compton, i3-gaps, polybar, htop, kitty, rofi, redshift

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,7 +16,7 @@
     whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
     # Make vim the default editor
-    editor = vim
+    editor = nvim
 
     preloadindex = true
 
@@ -44,3 +44,9 @@
     st = status
     lg = log --all --graph --decorate --date-order
     po = push origin HEAD
+
+[pull]
+    rebase = true
+
+[rebase]
+    autoStash = true
