--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 for_window [class=".*"] border pixel 0
 
-gaps inner 10
+gaps inner 5
 gaps outer 0
 smart_gaps on
 smart_borders no_gaps
@@ -21,13 +21,16 @@ smart_borders no_gaps
 new_window pixel 0
 hide_edge_borders both
 # font pango:Roboto Bold 8
-font pango: Overpass SemiBold
+font pango:Overpass SemiBold 10
+
+# Set the wallpaper
+exec --no-startup-id $HOME/.config/i3/scripts/wallpaper.sh --rotate
 
 # Startup apps
-exec --no-startup-id compton --dbus
-exec --no-startup-id wal -R
 exec --no-startup-id flameshot
 exec --no-startup-id redshift
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id "killall -q compton; compton --dbus"
 
 # Screenshot
 bindsym Print exec "flameshot gui"
@@ -41,8 +44,9 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start rofi
+# Rofi keys
 bindsym $mod+d exec --no-startup-id rofi -show combi
+bindsym $mod+c exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort
 
 # change focus
 bindsym $mod+Left focus left
@@ -187,10 +191,3 @@ client.placeholder      $bg     $bg     $fg  $bg       $bg
 
 client.background       $bg
 
-# Polybar
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-# bar {
-#    position top
-#    status_command i3status
-# }
