--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -17,34 +17,18 @@
 ;==========================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #E0222222
-background-alt = #E0222222
-foreground = ${xrdb:color7:#222}
-foreground-alt=${xrdb:color7:#222}
-i3_background = ${xrdb:color3:#222}
-i3_foreground = ${xrdb:color5:#222}
-i3_urgent_background = ${xrdb:color5:#222}
-i3_unfocused_foreground = ${xrdb:color2:#222}
+background = #ff000000
+background-alt = #444
+foreground = ${xrdb:color7:#962d4c}
+foreground-alt = #555
+primary = ${xrdb:color1:#ffb52a}
+secondary = ${xrdb:color2:#ee6137}
+alert = ${xrdb:color3:#bd2c40}
 
-status_good = ${xrdb:color7}
-status_sub = ${xrdb:color6}
-status_bad = ${xrdb:color5}
-
-line-color = #FFFFFF
-transparent = #00FFFFFF
-
-tray_background = #60e7ecdb
-
-primary = ${xrdb:color1:#222}
-secondary = ${xrdb:color2:#222}
-alert = ${xrdb:color3:#222}
-
-
-[bar/bar]
+[bar/base]
 width = 100%
 height = 30
-radius = 6.0
+radius = 0
 fixed-center = true
 
 background = ${colors.background}
@@ -53,59 +37,34 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 2
-border-color = #00000000
+border-size = 0
+border-color = #000000
 
-padding-left = 0
-padding-right = 2
+padding-left = 2
+padding-right = 3
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-
-modules-left = i3
-modules-center = date
-modules-right = filesystem backlight-acpi pulseaudio memory cpu wlan battery temperature powermenu
-
-tray-position = right
-tray-padding = 2
-tray-background = %{colors.tray_background}
+font-0 = NatoMono:pixelsize=12;1
+font-1 = FontAwesome5Free:style=Solid:pixelsize=13;2
+font-2 = FontAwesome5Brands:style=Solid:pixelsize=13;2
+font-3 = unifont:fontformat=truetype:size=8:antialias=false
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
+[bar/bar]
+inherit = bar/base
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
+modules-left = i3
+modules-center = date
+modules-right = updates filesystem wlan pulseaudio cpu memory temperature 
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+tray-position = left
+tray-background = ${colors.background}
 
 [module/i3]
 type = internal/i3
@@ -116,19 +75,19 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-label-mode-padding = 2
-;label-mode-foreground = #000
-;label-mode-background = ${colors.primary}
+label-mode-padding = 0
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline = ${colors.primary}
-label-focused-padding = 2
+label-focused-underline = ${colors.secondary}
+label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused-padding = 1
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
@@ -142,221 +101,198 @@ label-urgent-background = ${colors.alert}
 label-urgent-padding = ${self.label-focused-padding}
 
 ; Separator in between workspaces
-; label-separator = |
+;label-separator = |
 
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
+mount-0 = /
+mount-1 = /home
 
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #fff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
+label-mounted =  %mountpoint% %used% of %total%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/cpu]
 type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = %percentage:2%%
+interval = 0.5
+
+; Available tags:
+;   <label> (default)
+;   <bar-load>
+;   <ramp-load>
+;   <ramp-coreload>
+
+format = <label> <ramp-load>
+
+; Available tokens:
+;   %percentage% (default) - total cpu load
+;   %percentage-cores% - load percentage for each core
+;   %percentage-core[1-9]% - load percentage for specific core
+label =  %percentage%%
+
+; Spacing between individual per-core ramps (unreleased)
+ramp-coreload-spacing = 0
+ramp-coreload-0 = ▁
+ramp-coreload-1 = ▂
+ramp-coreload-2 = ▃
+ramp-coreload-3 = ▄
+ramp-coreload-4 = ▅
+ramp-coreload-5 = ▆
+ramp-coreload-6 = ▇
+ramp-coreload-7 = █
+
+ramp-load-spacing = 0
+ramp-load-0 = ▁
+ramp-load-1 = ▂
+ramp-load-2 = ▃
+ramp-load-3 = ▄
+ramp-load-4 = ▅
+ramp-load-5 = ▆
+ramp-load-6 = ▇
+ramp-load-7 = █
 
 [module/memory]
 type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
+interval = 3
+
+; Available tags:
+;   <label> (default)
+;   <bar-used>
+;   <bar-free>
+;   <ramp-used>
+;   <ramp-free>
+;   <bar-swap-used> (unreleased)
+;   <bar-swap-free> (unreleased)
+;   <ramp-swap-used> (unreleased)
+;   <ramp-swap-free> (unreleased)
+format = <label> <ramp-used>
+
+; Available tokens:
+;   %percentage_used% (default)
+;   %percentage_free%
+;   %gb_used%
+;   %gb_free%
+;   %gb_total%
+;   %mb_used%
+;   %mb_free%
+;   %mb_total%
+;   %percentage_swap_used%
+;   %percentage_swap_free%
+;   %mb_swap_total%
+;   %mb_swap_free%
+;   %mb_swap_used%
+;   %gb_swap_total%
+;   %gb_swap_free%
+;   %gb_swap_used%
+
+label =  %percentage_used%%
+
+; Only applies if <bar-used> is used
+bar-used-indicator =
+bar-used-width = 6
+bar-used-foreground-0 = #9d72dd
+bar-used-foreground-1 = #557755
+bar-used-foreground-2 = #f5a70a
+bar-used-foreground-3 = #ff5555
+bar-used-fill =▐
+bar-used-empty =▐
+bar-used-empty-foreground = #4f4f4f
+
+ramp-used-spacing = 0
+ramp-used-0 = ▁
+ramp-used-1 = ▂
+ramp-used-2 = ▃
+ramp-used-3 = ▄
+ramp-used-4 = ▅
+ramp-used-5 = ▆
+ramp-used-6 = ▇
+ramp-used-7 = █
 
 [module/wlan]
 type = internal/network
 interface = wlo1
 interval = 3.0
+; 🠅🠇
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-label-connected = %essid% %local_ip%
+format-connected-overline =
+label-connected =   %essid% (%signal%%) %downspeed:1:10%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+format-disconnected = <label-disconnected>
+format-disconnected-overline = ${self.format-connected-overline}
+label-disconnected =  
+label-disconnected-foreground = ${colors.primary}
+
+ramp-signal-0 =
+ramp-signal-1 =
+ramp-signal-2 =
 ramp-signal-foreground = ${colors.foreground-alt}
-
-[module/eth]
-type = internal/network
-interface = net0
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
-interval = 60
+interval = 5
 
-date = " %b %d, %Y"
-date-alt = " %Y-%m-%d"
+date =   %d %h %Y  %A
 
-time = %H:%M
-time-alt = %H:%M
+time =   %H:%M
 
-format-prefix = 
+format-prefix =
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-overline =
 
-label = %date% %time%
+label = %date%  %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+format-volume = <ramp-volume> <label-volume>
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
-label-muted-foreground = #666
+label-muted = 
+label-muted-margin = 2
+label-muted-foreground = ${colors.secondary} 
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+ramp-volume-0 =  
+ramp-volume-1 = 
+ramp-volume-2 =  
+
+bar-volume-width = 9
+bar-volume-foreground-0 = #9d72dd
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
-bar-volume-fill = ─
+bar-volume-fill = -
 bar-volume-fill-font = 2
-bar-volume-empty = ─
+bar-volume-empty = -
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ADP1
-full-at = 98
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
+bar-volume-empty-foreground = #a9a9a9
 
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 55
+warn-temperature = 50
 
-format = <ramp> <label>
-format-underline = #f50a4d
+format = <label> <ramp>
+format-overline =
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature-c%
-label-warn = %temperature-c%
+format-warn-overline = ${colors.secondary}
+label =  %temperature-c%  
+label-warn =  %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 =
+ramp-1 =
+ramp-2 =
 ramp-foreground = ${colors.foreground-alt}
 
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+[module/updates]
+type = custom/script
+exec = ~/.config/polybar/updates.sh
+interval = 600
 
 [settings]
 screenchange-reload = true
@@ -364,10 +300,10 @@ screenchange-reload = true
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
-;pseudo-transparency = false
 
 [global/wm]
 margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+
