--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,7 +8,7 @@
 
 [core]
     # Use custom `.gitignore` and `.gitattributes`
-    excludesfile = ~/.gitignore
+    excludesfile = ~/.gitignore_global
 
     # Treat spaces before tabs and all kinds of trailing whitespace as an error
     # [default] trailing-space: looks for spaces at the end of a line
@@ -19,6 +19,7 @@
     editor = nvim
 
     preloadindex = true
+    autocrlf = input
 
 # Colors!
 [color]
