--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,9 +10,9 @@
 
 - link:
     ~/.zsh: home/.zsh
-    ~/.zshenv: home/.zsh/zshenv.zsh
-    ~/.zprofile: home/.zsh/zprofile.zsh
-    ~/.zshrc: home/.zsh/zshrc.zsh
+    ~/.zshenv: home/.zsh/.zshenv_global
+    # ~/.zprofile: home/.zsh/zprofile.zsh
+    # ~/.zshrc: home/.zsh/zshrc.zsh
     ~/.gitconfig: git/.gitconfig
     ~/.gitignore_global: git/.gitignore
     # ~/.config/:
